# cpp-imgui

./: .clang-format  CMakeLists.txt  LICENSE  README.md  Task.hpp  main.cpp  task.hpp
lib/: image.cpp  image.hpp  mode.cpp  mode.hpp  storage.cpp  storage.hpp  uuid.hpp
ui/: add_task_button.cpp  add_task_form.cpp  button_with_icon.cpp  mode_toggle_button.cpp  task_list_ui.cpp  ui.hpp
